--- a/docs/solana/migration/validator-operator.mdx
+++ b/docs/solana/migration/validator-operator.mdx
@@ -14,34 +14,33 @@ Important notes:
 
 - Helium L1 Validators are no longer required after the transition to Solana
 - Staking HNT has been replaced with lock-up of HNT to establish a veHNT position
-- Existing Validator stakes will be automatically be migrated to veHNT positions during the
-  transition
-- Acton must be taken to return the HNT (unstake) from a veHNT position
-- Action must be taken to delegate veHNT to enable MOBILE Network and/or IOT Network emissions
+- Existing Validator stakes will be automatically migrated to veHNT positions during the transition
+- Validator Operators must take action to return the HNT (unstake) from a veHNT position
+- Validator Operators must take action to delegate veHNT to enable MOBILE Network or IOT Network
+  emissions
 
-Validators were critical for the ongoing operation of the Helium Network and will continue to earn
-HNT rewards for their role in supporting the Helium ecosystem until the moment of the L1 transition
-to Solana is completed.
+Validators will continue to earn HNT rewards for supporting the Helium ecosystem until the L1
+transition to Solana is completed.
 
-One of the impacts of the passing of HIP-70 and transitioning L1 is that the role Validators play as
-we know it will no longer be required, and Validators are sunsetted by the end of April 18th 2023
-after the transition is complete.
+One of the impacts of passing HIP-70 and transitioning L1 is that the role Validators play as we
+know it will no longer be required, and Validators are sunsetted by the end of April 18, 2023, after
+the transition is complete.
 
-After 00:00:00 UTC on the 19th of April, unless notified otherwise on the Helium Discord, Validators
-can be turned off.
+After 00:00:00 UTC on April 19, unless notified otherwise on the Helium Discord, Validators can be
+turned off.
 
 Validator Operators who remained staked receive new vote escrowed HNT (veHNT) based on their staked
-HNT amount and lock-up period. Your HNT will become veHNT and remain entirely in your wallet's
-custody. veHNT ownership is represented by a non transferable Solana NFT held in your wallet.
+HNT amount and lock-up period. Your HNT will become veHNT and stay entirely in your wallet's
+custody. A non-transferable Solana NFT held in your wallet represents veHNT ownership.
 
 Post-transition, veHNT will be the only way to vote in the Helium Network and to receive an income
-in Tokens for locking up tokens for a period of time
+in HNT tokens for locking up tokens.
 
 Holding veHNT means you, the wallet holder, have the opportunity to influence the future of the
 Helium Network, and the more voting weight you have, the more influence you can use.
 
 Delegating the veHNT in your wallet allows the wallet holder to receive a daily income of the subDAO
-token that the veHNT is delegated to.
+token to which the veHNT is delegated.
 
 ## Key Take Aways​
 
@@ -49,12 +48,12 @@ token that the veHNT is delegated to.
   production.
 - veHNT gives holders voting rights to determine the future of the Helium Network.
 - Validators who remain staked receive a 3x veHNT bonus for staked HNT, and their HNT remains locked
-  up for the six-month period as defined in HIP 51.
+  up for the six-month lock-up period as defined in HIP 51.
 - Stakers will no longer receive an income in HNT tokens.
 - veHNT holders will earn MOBILE or IOT tokens depending on which Helium subDAO they delegate their
   veHNT.
-- HNT can be released back to the validator owner's wallet after the minimum 6 month lock-up period
-  after staking cooldown is selected.
+- HNT can be released back to the validator owner's wallet after the minimum six-month lock-up
+  period after selecting the staking cooldown.
 
 ---
 
@@ -66,15 +65,15 @@ veHNT represents the voting power of the Helium Network. It does not have a fiat
 
 In the Helium ecosystem, HNT holders can receive veHNT by locking their HNT on-chain for a specified
 period in exchange for voting power and subDAO Delegation income in the HeliumDAO as defined in
-HIP-51.After the lock-up period ends, the same amount of HNT is released back to the owner's wallet
-and is now transferable, if needed.
+HIP-51. After the lock-up period ends, the amount of HNT is released to the owner's wallet and is
+now transferable.
 
-This provides the ability to earn other tokens such as MOBILE or IOT, if the holder delegates their
-veHNT to those subDAOs, respectively. Staking income in HNT will cease.
+This provides the ability to earn other tokens as MOBILE or IOT, if the holder delegates their veHNT
+to those subDAOs, respectively. Staking income in HNT will cease.
 
-veHNT allows those willing to stake or lock-up their HNT for periods of time a return in Helium
-tokens similar to staking with validators did previously. The difference is that veHNT allows a
-calculated percentage return in subDAO tokens rather than a lottery based consensus group return in
+veHNT allows those willing to stake, or "lock up," their HNT in exchange for a return in Helium
+tokens, similar to staking with Validators previously. The difference is that veHNT allows a
+calculated percentage return in subDAO tokens rather than a lottery-based Consensus Group return in
 HNT.
 
 ### What Was Validator Staked HNT Staking Rewards?​
@@ -90,29 +89,29 @@ the Consensus Group and 0.85% for Proof-of-Coverage challenges.
 
 ### How Will Staking Rewards Change with veHNT?​
 
-As of 02/02/23, the Challenger role was removed from Validators as Hotspots begin to beacon
-independently of be challenged. The PoC Challenger rewards pool has been returned to Hotspots.
+As of February 2, 2023, Oracle Based POC removed the Challenger role from Validators as Hotspots
+began to beacon independently. As a result, the PoC Challenger rewards pool returned to Hotspots.
 
-After HIP-70's L1 transition is implemented, the existing Validators will no longer be producing
-blocks for the Helium Network and will no longer receive HNT rewards. As their staked HNT will be
-converted to veHNT, these holders can optionally delegate to specific subDAOs.
+After HIP-70 and the L1 transition are implemented, the existing Validators will no longer produce
+blocks for the Helium Network and will no longer receive HNT rewards. As their staked HNT will
+convert to veHNT, these holders can optionally delegate to specific subDAOs.
 
 Currently, the IOT and MOBILE subDAO have a 6% token emission pool for veHNT stakers.
 
-After HIP-51, HIP-52 and HIP-53 are implemented, all the subDAOs combined will receive the non-HST
-emissions of HNT. At this time, this is 68% of emitted HNT and will increase to 69% at the next
-yearly emissions change in August 2023. This emissions curve changes annually such that the subDAOs
+After the implementation of HIP-51, HIP-52, and HIP-53, all the subDAOs combined will receive the
+non-HST emissions of HNT. This is 68% of emitted HNT and will increase to 69% in the following
+yearly emissions change in August 2023. This emissions curve changes annually, so the subDAOs
 eventually receive 85% of all future HNT emissions.
 
-Previously Validator stakers had a validator performance based randomized chance at 6% of the daily
+Previously Validator stakers had a Validator performance-based randomized chance at 6% of the daily
 HNT distribution of HNT. Now they have a share of 6% of the 68% of the HNT distributed to subDAOs
-based on how much HNT for how long they are willing to lock-up that HNT for.
+based on how much HNT for how long they are willing to lock up that HNT.
 
 ### What Happens to my HNT Previously Staked in a Pool?​
 
-Staking Pool providers have all made an effort to contact their customers to return the HNT that was
-staked in a pool, Contact the vendor managing your staking pool for more detailed information if you
-have not received your HNT back.
+Staking Pool providers have all made an effort to contact their customers to return the staked HNT.
+Contact the vendor managing your staking pool for more detailed information if you have yet to
+receive your HNT.
 
 :::caution As a Reminder
 
@@ -123,29 +122,29 @@ pools.**
 
 ### How much veHNT will validators receive?
 
-On 18th of April all validators still staked or in cooldown will automatically convert to veHNT with
-a six-month staking release date. as described in HIP-70
+On April 18, 2023, all validators still staked or in cooldown will automatically convert to veHNT
+with a six-month staking release date. as described in HIP-70.
 
-Each validator will receive 375,000 veHNT as a veHNT position for 6 months with rolling lock-up -
-referred to as constant lock-up
+Each validator will receive 375,000 veHNT as a veHNT position for six months with rolling lock-up -
+called "constant lock-up."
 
-This amount is calculated as 10,000 HNT x 12.5 multiplier for 6 months lock-up x 3 for the Landrush
-bonus (for early veHNT investors).
+This amount is calculated as 10,000 HNT x 12.5 multiplier for six months lock-up x 3 for the
+Landrush bonus (for early veHNT investors).
 
-If you have multiple validators then you will receive all the veHNT for each validator you have as a
-single large veHNT position.
+You will receive all the veHNT for each validator as a single sizeable veHNT position if you have
+multiple validators.
 
 ### Can I transfer my veHNT to another wallet?
 
-No you cannot transfer your veHNT to another wallet, but you can transfer out of one veHNT position
-into another position within the same wallet.
+No. veHNT can not be transferred to another wallet, but you can move out of one veHNT position into
+another within the same wallet.
 
 ### What Is a "Lock-Up" Period?​
 
 A lock-up period is a window of time when users are not allowed to transfer their HNT.
 
 You will incur a lock-up period when you stake your HNT for veHNT. The lock-up period is between 1
-day and 48 months selectable in days but with block granularity.
+day and 48 months, selectable in days but with block granularity.
 
 Lock-up periods help incentivize long-term holders of HNT and deter short-term speculators and those
 with shorter-term interests in the governance of the Network.
@@ -156,50 +155,50 @@ The amount of veHNT received for a lock-up period
 ### The Landrush period
 
 For the first ten days after Helium's transition onto Solana, there will be a 3x multiplier bonus
-for new veHNT stakers which includes validator owners migrating from Staked HNT to veHNT. This is
+for new veHNT stakers, which includes validator owners migrating from Staked HNT to veHNT. This is
 called the "Landrush" multiplier.
 
-New stakers are only eligible to receive this veHNT bonus during the initial seven-day Landrush
-period. HNT staked after this period will receive veHNT at the normal rate with no multiplier.
+New stakers can only receive this veHNT bonus during the initial seven-day Landrush period. HNT
+staked after this period will receive veHNT at the standard rate with no multiplier.
 
-This landrush period will end at 23:59:59 UTC time on 28th April 2023
+This landrush period will end at 23:59:59 UTC on April 28, 2023.
 
 ```
 For example:
 
-Staking 10,000 HNT during this Landrush period with a lock duration of six months gets 375,000 veHNT (10,000x12.5x3) that if cooldown is selected decays from 375,000 to 0 veHNT at the end of the staking period, and 10,000 HNT is returned to the wallet.
+Staking 10,000 HNT during this Landrush period with a lock duration of six months gets 375,000 veHNT (10,000x12.5x3) that, if the cooldown is selected, decays from 375,000 to 0 veHNT at the end of the staking period, and 10,000 HNT is returned to the wallet.
 
 Increasing to stake 20,000 HNT during this Landrush period with a lock duration of 24 months returns 3,000,000 veHNT (20,000x50x3), and at the end of the staking period, 20,000 HNT is returned to the wallet.
 ```
 
-Validator owners can also take advantage of the 10 day bonus period and get the 3x bonus reapplied
-if they extend their default 6 month lock-up period. This 3x bonus will not apply to the later
-extended period if they extend the lock-up further after the initial seven days, or veHNT is
-transfered to another staking position after the 10 day period.
+Validator owners can also take advantage of the ten-day bonus period and get the 3x bonus reapplied
+if they extend their default six-month lock-up period. However, this 3x bonus will not apply to the
+later extended period if they extend the lock-up further after the initial seven days or veHNT is
+transferred to another staking position after the ten days.
 
-### What should all validator operators plan to do.
+### What should all validator operators plan to do?
 
-- Arrange to turn off validators after 00:00:00 UTC on 19th April
+- Arrange to turn off validators after 00:00:00 UTC on April 19
 - Load any wallets owning staked validators into the Helium Wallet App.
 - If Validators are staked with HNT on a Ledger, migrate the Ledger Wallet
 - Decide if you want to take back your HNT or not.
 - Decide if you want to top-up your veHNT position with more HNT.
-- Decide if you want to lock-up all or part of your veHNT for longer than 6 months.
+- Decide if you want to lock up all or part of your veHNT for longer than six months.
 - Decide what subDAO or subDAO split to delegate your veHNT to.
 
 ### What if I do nothing about my Validator Stake?
 
-If a validator owner does "nothing" then the stake will transfer over to be veHNT automatically.
+If a validator owner does "nothing, " the Stake will transfer to veHNT automatically.
 
-The owner will receive 375,000 veHNT per validator they own in their wallet as a single position
+The owner will receive 375,000 veHNT per validator in their wallet as a single position.
 
-This will not not enter a cooldown period and they will never receive their HNT back until they
-enter the wallet and select the cooldown option from within the Realms.today governance link.
+This will not enter a cooldown period, and they will only receive their HNT back once they enter the
+wallet and select the cooldown option from within the Realms. Today governance link.
 
-After selecting cooldown they will get their 10,000 HNT per validator back in 183 days (6 months)
+After selecting cooldown, they will get their 10,000 HNT per validator back in 183 days (6 months)
 after the date of the cooldown selection.
 
-They will no longer receive any income in HNT, from the date of transition.
+They will no longer receive any income in HNT from the transition date.
 
 They will need to delegate their veHNT to either IOT or MOBILE (They can split it if desired) to
 earn an income in IOT or MOBILE tokens.
@@ -209,22 +208,22 @@ periods.
 
 Each position of veHNT can delegate all or nothing of the veHNT.
 
-The validator server can be turned off at any point after 00:00:00 UTC on 19th April
+The validator server can be turned off at any point after 00:00:00 UTC on April 19
 
 ### What if I want my HNT back?
 
-The stake will transfer over to be veHNT.
+The Stake will transfer over to veHNT.
 
-The owner will receive 375,000 veHNT per validator they own in their wallet as a single position
+The owner will receive 375,000 veHNT per validator in their wallet as a single position.
 
-The validator owner will need to select the cooldown option from within the Realms.today governance
-link on that position from within the Helium Wallet App
+The validator owner must select the cooldown option from within the Realms. Today governance links
+on that position from within the Helium Wallet App.
 
-After selecting cooldown they will get their 10,000 HNT per validator back in 183 days (6 months)
+After selecting cooldown, they will get their 10,000 HNT per validator back in 183 days (6 months)
 after the date of the cooldown selection. This is like the 250,000 block cooldown period validators
 previously had.
 
-They will no longer receive any income in HNT, from the date of transition.
+They will no longer receive any income in HNT from the transition date.
 
 They can delegate their veHNT to either IOT or MOBILE (They can split it if desired) to earn a
 linear decreasing income in IOT or MOBILE tokens while in cooldown.
@@ -234,49 +233,48 @@ periods. Each position of veHNT can delegate all or nothing of the veHNT.
 
 ### Ledger Wallet Migration.
 
-Any validator staked from HNT held on Ledger hardware wallets using the Helium App will need to be
-migrated to the Solana App using the Helium Solana migration app
+Any validator staked from HNT held on Ledger hardware wallets using the Helium App must be migrated
+to the Solana App using the Helium Solana migration app.
 
-See the [Ledger Migration Docs](/solana/migration/ledger) The latest information on the procedure
-for Ledger users.
+See the [Ledger Migration Docs](/Solana/migration/ledger) for the latest information on the
+procedure for Ledger users.
 
-### “Top-up” of veHNT Positions
+### "Top-up" of veHNT Positions
 
-You can “top-up” your 375,000 per validator stake with more HNT from a minimum of 1 HNT and this
+You can "top-up" your 375,000 per validator stake with more HNT from a minimum of 1 HNT, and this
 must be added to an existing position or transferred from a position of lesser lock-up time.
 
-Positions started within the Landrush Period cannot be topped-up AFTER the Landrush period. They can
-be topped up within the landrush period.
+Positions started within the Landrush Period cannot be topped up AFTER the Landrush period. However,
+they can be topped up within the land rush period.
 
-### Why hold Multiple veHNT positions ?
+### Why hold Multiple veHNT positions?
 
 It is highly recommended that previous validator owners and large HNT stakers split their single
-position received after the transition into several smaller positions immediately upon lock-up and
-when applicable within 10 days after the Solana transition.ie before 23:59:59 UTC on 28th April.
+position received after the transition into several smaller positions immediately upon lock-up and,
+when applicable, within ten days after the Solana transition, before 23:59:59 UTC on April 28.
 
-This is because subDAO delegation of veHNT is a 0 or 100% all or nothing action.
+This is because the subDAO delegation of veHNT is a 0 or 100% all-or-nothing action.
 
 - Splitting veHNT across multiple subDAOs requires multiple positions.
 - Splitting veHNT over different lock-up periods requires multiple positions.
-- Splitting veHNT with some in constant lockup and some in cooldown requires multiple positions.
+- Splitting veHNT with some in constant lock-up and some in cooldown requires multiple positions.
 
-Splitting positions after the 28th of April would mean that the veHNT transferred to the new part of
-the split does not inherit the 3x bonus multiplier.As this bonus multiplier only applies to
-positions
+Splitting positions after April 28 would mean that the veHNT transferred to the new part of the
+split does not inherit the 3x bonus multiplier. As this bonus multiplier only applies to positions
 
-Splitting as an action is simply transferring some of the veHNT in one position to another new or
-existing position. S
+Splitting as an action transfers some of the veHNT from one position to another new or existing
+position.
 
 veHNT owners may want to frequently vary their split of subDAO delegations and lock-up periods to
-suit their own personal situations and the variance of the HNT per subDAO emitted based on the DAO
-utility scores.
+suit their situations and the variance of the HNT per subDAO emitted based on the DAO utility
+scores.
 
 ### Can I Increase My Staking Lock-up Period At Any Time?​
 
 Yes. You can increase your lock-up period to the maximum of 48 months at any time, and each increase
-activates at the start of the next epoch. If the veHNT is delegated you must undelegate, change the
-period and redelegate and lose delegation rewards within that 24 hour Epoch. If those three actions
-take longer than an epoch or are split over two epochs then delegation rewards are lost for two
+activates at the start of the next epoch. If the veHNT is delegated, you must undelegate, change the
+period and redelegate and lose delegation rewards within that 24-hour epoch. If those three actions
+take longer than an epoch or are split over two epochs, then delegation rewards are lost for two
 Epochs.
 
 ### Can I Decrease My Staking Period For Fast Access to My HNT and Take a Penalty?​
@@ -286,16 +284,16 @@ period for any reason.
 
 ### Can I Automate Re-Staking?​
 
-Yes a constant rolling lock-up period will be the default option called Constant Lock-up. The decay
+Yes, a constant rolling lock-up period will be the default option called Constant Lock-up. The decay
 countdown start point will be positive action needed to start the lock-up cooldown period.
 
-Validator owners will be automatically staked for 6 years with a Constant lockup.
+Validator owners will be automatically staked for six years with a Constant lock-up.
 
 ### How to Choose a subDAO to Stake?​
 
-HIP-51 defines that all subDAOs return a maximum of 6% of their earnings to their veHNT delegators
-and is designed to be an equal maximum reward level across all subDAOs so that no subDAO can buy
-their way to a higher DAO Utility score.
+HIP-51 defines that all subDAOs return a maximum of 6% of their earnings to their veHNT delegators.
+It is designed to be an equal maximum reward level across all subDAOs so that no subDAO can buy its
+way to a higher DAO Utility score.
 
 Returns can be lower than 6% in subDAO tokens if the subDAO votes to provide a lower token return in
 return for other benefits or similar.
@@ -306,8 +304,8 @@ in HIP-51, which drives greater earnings of HNT for the subDAO.
 As more veHNT holders delegate to a particular subDAO, individual holder earnings will reduce the
 amount of net subDAO token earnings as delegators share the 6% subDAO token emissions.
 
-The more veHNT delegated to a subDAO the more the subDAO Utility score increases and the more HNT
-the subDAO gets at each epoch improving the HNT/subDAO Token ratio. But the more veHNT delegated,
+The more veHNT delegated to a subDAO, the more the subDAO Utility score increases and the more HNT
+the subDAO gets at each epoch, improving the HNT/subDAO Token ratio. But the more veHNT delegated,
 the more veHNT holders the 6% will have to be shared between.
 
 ### Will My subDAO Earnings Remain The Same Over The Time Period Lock-Up?​
@@ -322,9 +320,9 @@ They may decrease when:
 
 - More veHNT is delegated in the subDAO you delegated to - your share is reduced
 - More veHNT is delegated to other subDAOs - other treasuries get more HNT.
-- Your delegated veHNT decays over time after you entered cooldown.
-- More Hotspots are online in other subDAOs with a non zero onboarding fee.
+- Your delegated veHNT decays over time after you enter cooldown.
+- More Hotspots are online in other subDAOs with a non-zero onboarding fee.
 - More data is transferred and burned in other subDAOs.
 
-Thus it can be observed that delegating more or all of your veHNT to a specific subDAO has the
-opportunity to both increase or decrease your subDAO earnings from delegation.
+Thus, delegating more or all of your veHNT to a specific subDAO can increase or decrease your subDAO
+earnings from delegation.
