--- a/docs/helium-tokens/datacredit.mdx
+++ b/docs/helium-tokens/datacredit.mdx
@@ -130,14 +130,14 @@ acquiring Data Credits.
 
 ### Sphere Data Credit Portal
 
-The [Data Credit Portal](/data-credit-portal) by [Sphere][sphere] allows network users to acquire
-Data Credits without directly holding cryptocurrency. The tool is designed for allocating Data
-Credits for network users like [LNS operators][open-lns] or mobile [service
-providers][service-providers]. The tool provides a clear invoice once transactions are complete to
-simplify accounting.
+The [Data Credit Portal][dc-portal] built by [Sphere][sphere] allows network users to acquire Data
+Credits without directly holding cryptocurrency. The tool is designed for allocating Data Credits
+for network users like [LNS operators][open-lns] or mobile [service providers][service-providers].
+The tool provides a clear invoice once transactions are complete to simplify accounting.
 
 [bme]: /hnt-token/#data-credits-and-burn-and-mint-economics
 [sphere]: https://sphere.engineer
 [open-lns]: /iot/open-lns
 [service-providers]: /mobile/service-providers
 [hip-69]: https://github.com/helium/HIP/blob/main/0069-reassertion-fee-reduction.md
+[dc-portal]: /data-credit-portal
