--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -1,127 +1,126 @@
 ---
 id: hnt-token
 title: The Helium Network Token
-pagination_label: HNT Token
-sidebar_label: HNT Token
+pagination_label: Helium Network Token
+sidebar_label: Helium Network Token
 description: Helium Network Token Documentation
 image: https://docs.helium.com/img/link-image.png
-slug: /helium-tokens/hnt
+slug: /hnt-token
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('img/blockchain/heliumtoken.png')} />
 
-The Helium Token is the native cryptocurrency and protocol token of the Helium Network. Its symbol
-is HNT. Before the launch of the Helium Network, there was no pre-mine of HNT. The first HNT was
-produced on July 29th, 2019 on
-[block 93](https://explorer-old.helium.com/txns/sEP-cbb2tvSrfbBleT21yGDNM8FIjNr3UT3k3BeZELw).
+The Helium Network Token ("HNT") is the native cryptocurrency and protocol token of the Helium
+Network ("the Network").
 
-:::info For statistics on HNT
+The original Helium blockchain produced the first HNT on July 29th, 2019, on [block 93][block-93].
+There was no pre-mine of HNT before the launch of the Network.
 
-[See the Market section on the Helium Explorer](https://explorer-old.helium.com/market).
+Navigate to [https://explorer.helium.com/stats][explorer-stats] for up-to-date information on
+Network tokens.
 
-:::
+---
 
-## Helium Token Usage
+## HNT Usage
 
-The Helium Token is designed to serve the needs of the two primary parties in the Helium ecosystem:
+HNT serves the needs of the two primary parties in the Helium ecosystem:
 
-1. **Hotspot Hosts and Network Operators**. Hosts mine network tokens like [IOT](/helium-tokens/iot)
-   and [MOBILE](/helium-tokens/mobile) while deploying and maintaining network coverage. These
-   network tokens are redeemable for HNT.
-2. **Enterprises and developers using the Helium Network** to connect devices and build IoT
-   applications. Data Credits, which are a $USD-pegged utility token derived from HNT in a burn
-   transaction, [are used to pay transaction fees](/blockchain/transaction-fees) for wireless data
-   transmissions on the network.
+1. **Hotspot Hosts and Operators**. Hosts are rewarded in network tokens like [IOT][iot] or
+   [MOBILE][mobile] while deploying and maintaining network coverage. These network tokens are
+   redeemable for HNT.
+2. **Enterprises and Developers using the Helium Network** to connect devices and build IoT
+   applications. [Data Credits][datacredit], which are a $USD-pegged utility token derived from HNT
+   in a burn transaction, [are used to pay transaction fees][txn-fees] for wireless data
+   transmissions on the Network.
+
+---
 
 ## HNT Token Economic Concepts
 
-The Helium Network uses three distinct token economic concepts to ensure HNT supply is both
-plentiful for network needs but also relatively scarce, with a known maximum.
+The Network uses three token economic concepts to ensure HNT supply is both plentiful for usage
+needs and relatively scarce, with a known maximum.
 
 ### Max Supply
 
-At launch [genesis block](https://explorer-old.helium.com/blocks/1), the Helium Network targeted
-5,000,000 HNT per month. Since the community approval of
-[HIP-20](https://github.com/helium/HIP/issues/73), the Helium Network uses a two-year halving
-schedule, resulting in a maximum HNT supply of 223,000,000 HNT.
+The Network targeted the distribution of 5,000,000 HNT per month at launch. Following the community
+approval of HIP-20, the Network uses a two-year halving schedule, resulting in a maximum HNT supply
+of 223,000,000 HNT.
 
-In the below issuance schedule, year 1 starts on **August 1, 2019**. The first halving happened on
-day one of year three, **August 1, 2021**.
+| Year<sup>(</sup>[^1]<sup>)</sup> | HNT at Year Start | Target HNT Emission |
+| :------------------------------: | ----------------: | ------------------: |
+|                1                 |                 0 |          60,000,000 |
+|                2                 |        60,000,000 |          60,000,000 |
+|                3                 |       120,000,000 |          30,000,000 |
+|                4                 |       150,000,000 |          30,000,000 |
 
-| Year | HNT at Year Start | Target HNT Emission |
-| :--- | :---------------- | :------------------ |
-| 1    | 0                 | 60,000,000          |
-| 2    | 60,000,000        | 60,000,000          |
-| 3    | 120,000,000       | 30,000,000          |
-| 4    | 150,000,000       | 30,000,000          |
+[^1]:
+    Year 1 starts on **August 1st, 2019**. The first halving happened on day one of year three,
+    **August 1st, 2021**.
 
-> Full token emissions can be viewed in the HNT section of this document:
-> [Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
+The full token emission schedule can be viewed in the HNT section of the [Token Emissions as of
+Solana Migration][sol-emissions] document.
 
-### Data Credits and Burn-and-Mint Economics
+### Burn and Mint Economics
 
-**Data Credits** are a $USD-pegged utility token derived from HNT in a burn transaction and used to
-pay [all transaction fees](/blockchain/transaction-fees) on the Helium Network. One Data Credit will
-always cost `$0.00001`. Or, `$1.00` will always buy you `100,000` Data Credits. But, as noted above,
-Data Credits are produced by burning HNT. And the market price of HNT will of course fluctuate.
+[Data Credits][datacredit] ("DC") are a $USD-pegged utility token derived from HNT in a burn
+transaction and used to pay [all transaction fees][txn-fees] on the Helium Network. DC is only
+produced by burning HNT.
 
-This HNT to DC relationship is based on a design commonly called a
-[burn and mint equilibrium](https://multicoin.capital/2018/02/13/new-models-utility-tokens/) and is
-intended to allow for the supply of HNT to respond to network usage trends such that, when
-equilibrium is found, the amount of HNT that exists remains static month on month. The amount of
-Data Credits produced by burning HNT will move up and down based on the USD price of HNT as reported
-by the HNT [Price Oracles](/oracles/price-oracles). Below are a few examples of how this works
-on-chain.
+One Data Credit will always cost $0.00001. Or, $1.00 will always exchange for 100,000 DC.
 
-**Example 1**
+This HNT to DC relationship is based on a design commonly called a [burn and mint equilibrium][bme]
+and intends to allow for the supply of HNT to respond to Network usage trends such that the amount
+of HNT that exists remains static month on month. The amount of DC produced by burning HNT will
+increase and decrease based on the USD price of HNT as reported by the HNT [Price
+Oracles][price-oracles].
 
-- As always, the price of one DC is `$.00001`
-- The current HNT Oracle price is `$1`
-- Burning `1` HNT would produce `100,000` DCs
+Below are a few examples of HNT to DC conversion calculations:
 
-**Example 2**
+**Example 1: 1 HNT = $1.00**
 
-A Helium Network user requires `50,000` DCs per month to send data for their fleet of
-Helium-connected mouse traps. To acquire these 50,000 DCs per month, they would burn .5 HNT using
-the following math:
+- The price of one DC is $0.00001.
+- The current HNT Oracle price is $1.
+- Burning 1 HNT would produce 100,000 DC.
 
-- The price of DC is `$.00001`
-- The current HNT Oracle price is `$1`
-- Burning `0.5` HNT would produce the needed `50,000` DCs
+**Example 2: 1 HNT = $5.00**
+
+- The price of one DC is $0.00001.
+- The current HNT Oracle price is $5.
+- Burning 1 HNT would produce 500,000 DC.
 
 :::important Data Credits are non-transferrable
 
-Once burned, DCs are owned by the Helium wallet specified in the burn transaction. They are
-non-transferrable.
+Once the burn transaction is complete, the receiving Helium Wallet owns all of the DC and can not
+transfer them to any other Helium Wallet.
 
 :::
 
 ### Net Emissions
 
-At this point, the astute reader might be asking themselves the following question:
+Net Emissions give the protocol enough HNT for rewards in perpetuity.
 
-> If HNT supply is capped at 223,000,000 AND the network is constantly burning HNT to mint Data
-> Credits to enable transactions, won't we run out of HNT?
+Net Emissions enable the Network to monitor the number of HNT burned for DC in a given epoch and add
+that to the number of HNT to mint that epoch.
 
-**Yes.** This is where the idea of Net Emissions comes in. Along with Max Supply,
-[HIP-20](https://github.com/helium/HIP/issues/73) also introduced the idea of Net Emissions. Net
-Emissions give the protocol enough HNT to reward consensus group members and Hotspots in perpetuity.
+For example, if 10 HNT burn for DC in an epoch, the system would mint 10 additional HNT than were
+expected in that given epoch.
 
-The
-[complete Net Emissions discussion in the HIP](https://github.com/helium/HIP/blob/master/0020-hnt-max-supply.md#net-emissions)
-is the best resource on this. A quick summary here is as follows:
+A cap on the number of HNT minted via Net Emissions per epoch ensures the desired deflationary
+effect of Burn and Mint and the resulting reduction of supply. Because HNT produced via Net
+Emissions do not add to the total outstanding, they do not violate max supply.
 
-- Using Net Emissions, the network would monitor how many HNT were burnt for Data Credits in a given
-  epoch and add them to the number of HNT to be minted that epoch. For example, if 10 HNT were
-  burned for Data Credits in an epoch, the system would mint 10 more HNT than were expected in that
-  given epoch.
-- Because HNT produced via Net Emissions do not add to the total outstanding, they do not violate
-  max supply.
-- However, Net Emissions would counteract the desired, deflationary effect of Burn and Mint. If the
-  system replaces all the HNT that are burned to create Data Credits, there is no resulting
-  reduction of supply.
-- Because of this, when implemented, there will be a cap on the number of HNT that can be created
-  via Net Emissions per epoch. When the HNT burned for DCs exceeds this cap, there will be a
-  reduction in supply.
+Review the [complete Net Emissions discussion in the HIP][hip-20] for more information.
+
+[block-93]: https://explorer-old.helium.com/txns/sEP-cbb2tvSrfbBleT21yGDNM8FIjNr3UT3k3BeZELw
+[bme]: https://multicoin.capital/2018/02/13/new-models-utility-tokens/
+[datacredit]: /data-credit
+[explorer-stats]: https://explorer.helium.com/stats
+[hip-20]: https://github.com/helium/HIP/blob/master/0020-hnt-max-supply.md#net-emissions
+[iot]: /iot-token
+[mobile]: /mobile-token
+[price-oracles]: /oracles/price-oracles
+[sol-emissions]:
+  https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf
+[txn-fees]: /blockchain/transaction-fees
